# trivial

./: .travis.yml  README.md  default.nix  shell.nix  trivial.cabal  trivial.nix
src/: Easy.hs  Main.hs  Simple.hs  Trivial.hs
src/Simple/: GHC.hs  GHCJS.hs  Internal.hs  Types.hs
src/Simple/Internal/: Base.hs  Count.hs  DataRate.hs  Factor.hs  Improving.hs  Magnitude.hs  Percent.hs  Pretty.hs  Rate.hs  Similar.hs  Space.hs  Time.hs  Utilities.hs  Variance.hs
