name:                trivial
version:             0.1.0.0
synopsis:            Simple benchmarking and Easy testing.
-- description:         
homepage:            github.com/grumply/champ
license:             BSD3
license-file:        LICENSE
author:              Sean M. Hickman
maintainer:          sean@grump.ly
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:    Easy
                      Simple
                      Trivial
                      Simple.Internal.Base
                      Simple.Internal.Count
                      Simple.Internal.DataRate
                      Simple.Internal.Factor
                      Simple.Internal.Improving
                      Simple.Internal.Magnitude
                      Simple.Internal.Percent
                      Simple.Internal.Pretty
                      Simple.Internal.Rate
                      Simple.Internal.Similar
                      Simple.Internal.Space
                      Simple.Internal.Time
                      Simple.Internal.Utilities
                      Simple.Internal.Variance
                      Simple.Types
                      Simple.Internal
  -- other-modules:       
  -- other-extensions:    
  build-depends:       aeson, async, base >=4.5, containers, deepseq, directory, hashable, managed, mtl, random, stm, text, unordered-containers, vector, transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

                      