name:                trivial
version:             0.1.0.0
synopsis:            Simple benchmarking and Easy testing for GHC and GHCJS.
-- description:         
homepage:            github.com/grumply/trivial
license:             BSD3
license-file:        LICENSE
author:              Sean M. Hickman
maintainer:          sean@grump.ly
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
    build-depends:       aeson, async, base >=4.5, deepseq, directory, hashable, mtl, random, stm, text, transformers, unordered-containers, vector, ghc-prim
    exposed-modules:    Easy
                        Simple
                        Trivial
                        Simple.Internal.Base
                        Simple.Internal.Count
                        Simple.Internal.DataRate
                        Simple.Internal.Factor
                        Simple.Internal.Improving
                        Simple.Internal.Magnitude
                        Simple.Internal.Percent
                        Simple.Internal.Pretty
                        Simple.Internal.Rate
                        Simple.Internal.Similar
                        Simple.Internal.Space
                        Simple.Internal.Time
                        Simple.Internal.Utilities
                        Simple.Internal.Variance
                        Simple.Types
  if (impl(ghcjs))
    build-depends:      ghcjs-base
    exposed-modules:    Simple.GHCJS
  else
    exposed-modules:    Simple.GHC
  hs-source-dirs:      src
  default-language:    Haskell2010

                      